<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_icon"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09"
        tools:ignore="ImageContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="306dp"
        android:layout_height="267dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/cardview"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.235">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/logo_hello"
            app:srcCompat="@drawable/ic_people" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="12dp"
            android:text="@string/welcometext"
            android:textAppearance="@style/welcome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="60dp"
            android:text="@string/user_message"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/name_user"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="90dp"
            android:autofillHints="no"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/name_user"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/white"
             />

        <CheckBox
            android:id="@+id/checkBox_nikname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="133dp"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/check_box_text_nikname" />

        <Button
            android:id="@+id/button_start_chat"
            app:cornerRadius="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="190dp"
            android:text="@string/start_chatting"
            app:icon="@drawable/_button_start_chatting"
            android:backgroundTint="@color/colorButton"
             />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

